--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -561,3 +561,14 @@
     inset 0 -18px 28px rgba(0, 0, 0, 0.55);
 }
 
+
+
+section {
+  scroll-margin-top: 90px;
+}
+
+@media (max-width: 640px) {
+  section {
+    scroll-margin-top: 70px;
+  }
+}
