--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -6,6 +6,7 @@
 
   color: #ffffff;
   background-color: #050816;
+  --bg-section: rgba(10, 16, 35, 0.96);
 
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
